# rust_embd_test

./: Cargo.toml
.cargo/: config
src/: main.rs
