[package]
name = "rust_embd_test"
version = "0.1.0"
authors = ["nexos <nexoscp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
